<resources>
    <string name="app_name">Electric Vehicle</string>
    <string name="cars_name">EV Name</string>
    <string name="detail">Detail</string>
    <string name="share">SHARE</string>
    <string name="favorite">FAVORITE</string>
    <string name="pro">Android Enthusiast</string>
    <string name="name">Muhammad Ega S</string>
    <string name="email">simatupang.ega@gmail.com</string>
    <string name="content_text_etron">The Audi e-tron is a fully-electric mid-size luxury crossover SUV produced by Audi, which was unveiled as a concept car at the 2015 Frankfurt Motor Show. It is the company\'s first electric mass production car that was first delivered in May 2019. A Sportback variant is scheduled for production in early 2020. It has an EPA range of 204 miles (328 km).</string>
    <string name="content_manufacturer_etron">Audi</string>
    <string name="content_prod_etron">2018-present</string>
    <string name="price_etron">$74,800</string>
    <string name="spec">Spesifikasi</string>
    <string name="owner">Owner</string>
    <string name="assembly_etron">Belgium: Forest</string>
    <string name="class_etron">Mid-size luxury crossover SUV</string>
    <string name="acc_etron">5.7 seconds</string>
    <string name="price_i3">$44,450</string>
    <string name="content_desc_i3">The BMW i3 is a B-class, 3 Series, high-roof hatchback manufactured and marketed by BMW with an electric powertrain using rear wheel drive via a single-speed transmission and an underfloor Li-ion battery pack and an optional range-extending gasoline engine. The i3 was BMW\'s first mass-produced zero emissions vehicle and was launched as part of BMW\'s electric vehicle BMW i sub-brand.</string>
    <string name="content_manufacturer_i3">BMW</string>
    <string name="prod_i3">2013-present</string>
    <string name="assembly_i3">Germany: Leipzig</string>
    <string name="class_i3">Subcompact (B) luxury vehicle</string>
    <string name="battery_i3">i3 60 Ah: 22 (18.8 usable) kWh lithium-ion battery i3 94 Ah: 33 (27.2 usable) kWh lithium-ion battery i3 120 Ah 42.2 kWh lithium-ion battery</string>
    <string name="acc_i3">7.3 seconds</string>
    <string name="content_desc_zinoro">Zinoro 1E (之诺1E) is all-electric crossover, based on the BMW X1 (E84), is the first product of BMW Brilliance’s new brand and the first new energy vehicle (NEV) from a Chinese premium manufacturer. It was unveiled at the 2013 Guangzhou Auto Show. The Zinoro 1E has a rear-mounted 125 kW electric motor and produces peak torque of 250 N·m (184 lb-ft). The motor is powered by a lithium iron phosphate battery pack that can deliver an all-electric range of up to 150 km (93 mi). Charging of the battery takes around 7.5 hours with a 16A wallbox. Top speed is electronically limited to 130 km/h (81 mph).</string>
    <string name="content_manufacturer_zinoro">BMW Brilliance</string>
    <string name="prod_zinoro">2013</string>
    <string name="assembly_zinoro">China</string>
    <string name="class_zinoro">BEV Crossover (based on the BMW X1 E84)</string>
    <string name="battery_zinoro">Lithium iron phosphate battery pack that can deliver an all-electric range of up to 150 km (93 mi). Charging of the battery takes around 7.5 hours with a 16A wallbox.</string>
    <string name="acc_zinoro">7.6 seconds</string>
    <string name="price_zinoro">$56,625</string>
    <string name="price_byd">$35,000</string>
    <string name="content_text_byd">The BYD e6 is an all-electric compact crossover/compact MPV manufactured by BYD with a range of 300 km (186 mi) according to the carmaker. Field testing began in China in May 2010 with 40 units operating as taxis in the city of Shenzhen. Sales to the general public began in Shenzhen on October 26, 2011, after over two years behind schedule (the original release date was in 2009). As of January 2016, e6 units are operating as taxis in Colombia, Belgium, the U.S. (New York and Chicago), the Netherlands, and the U.K. Since 2010 sales in China totaled 34,862 units through December 2016. The BYD e6 ranked as the best-selling pure electric car in China in 2016 and won a golden medal for “Best Quality Product” at the Havana International Fair 2015.</string>
    <string name="content_manufacturer_byd">BYD</string>
    <string name="content_prod_byd">2009-present</string>
    <string name="class_byd">Compact crossover/Compact MPV (M)</string>
    <string name="battery_byd">61 kWh (LiFePO4)</string>
    <string name="acc_byd">14 seconds</string>
    <string name="price_bolt">$41,780</string>
    <string name="content_text_bolt">Chevrolet Bolt or Chevrolet Bolt EV is a front-motor, five-door all-electric subcompact hatchback marketed by Chevrolet; developed and manufactured in partnership with LG Corporation. A rebadged European variant is sold as the Opel Ampera-e in mainland Europe. The Bolt has an EPA all-electric range of 238 miles (383 km), and EPA fuel economy rating of 119 miles per gallon gasoline equivalent (mpg-e) (2.0 L/100 km) for combined city/highway driving. The European Ampera-e, has a certified range of 320 miles (520 km) under the New European Driving Cycle (NEDC) and 240 miles (380 km) under the more strict Worldwide harmonized Light vehicles Test Procedures (WLTP). Production for the model year 2017 began in November 2016. The European version began production in February 2017. U.S. sales began in California in December 2016, with nationwide US and Canadian release in 2017.</string>
    <string name="content_manufacturer_bolt">Chevrolet</string>
    <string name="content_prod_bolt">2016-present</string>
    <string name="class_bolt">Subcompact</string>
    <string name="battery_bolt">60.0 kWh lithium-ion, 288 cells, 96s,3p, approx 400 V</string>
    <string name="acc_bolt">7 seconds</string>
    <string name="price_czero">$20,666</string>
    <string name="content_text_czero">Mitsubishi i-MiEV (MiEV is an acronym for Mitsubishi innovative Electric Vehicle) is a five-door hatchback electric car produced by Mitsubishi Motors, and is the electric version of the Mitsubishi i. Rebadged variants of the i-MiEV are also sold in Europe by PSA Peugeot Citroën (PSA) as the Peugeot iOn and Citroën C-Zero. The i-MiEV is the world\'s first modern highway-capable mass production electric car.</string>
    <string name="content_prod_czero">2009-present</string>
    <string name="class_czero">Kei Car</string>
    <string name="battery_czero">16 kWh / 58 MJ (Li-ion battery)</string>
    <string name="acc_czero">15.9 seconds</string>
    <string name="content_text_f500e">The Fiat 500 (codeproject Type 312) is a two-door, four-passenger, transverse front-engine, front-wheel-drive A-segment city car manufactured and marketed by the Fiat subdivision of FCA since 2007 in hatchback coupé and fixed-profile convertible body styles, over a single generation — with an intermediate facelift in Europe with model year 2016 . The 500 is internally designated as the Type 312 by FCA.</string>
    <string name="prod_f500e">2007-present</string>
    <string name="assembly_f500e">Tychy, Poland\nToluca, Mexico</string>
    <string name="class_f500e">Battery electric vehicle (BEV)</string>
    <string name="battery_f500e">111 hp (83 kW) and 147 lb⋅ft (199 N⋅m) permanent-magnet, three-phase synchronous-drive electric motor, and its 24 kWh liquid-cooled/heated li-ion battery</string>
    <string name="acc_f500e">9.1 seconds</string>
    <string name="price_focus">$18,761</string>
    <string name="content_text_focus">The Ford Focus Electric is a 5-door hatchback electric car produced by Ford. The Focus Electric is Ford\'s second full production, all-electric vehicle (the first being the Ford Ranger EV), and production began in December 2011.</string>
    <string name="manufacturer_focus">Ford</string>
    <string name="prod_focus">2011-2018</string>
    <string name="assembly_focus">Michigan Assembly Plant, Wayne, Michigan\nSaarlouis, Germany</string>
    <string name="class_focus">Compact car (C-Class)</string>
    <string name="battery_focus">23 or 33.5 kWh lithium-ion battery</string>
    <string name="acc_focus">10.5 seconds</string>
    <string name="price_fit">$36,625</string>
    <string name="content_text_fit">The Honda Fit (Japanese: ホンダ・フィット Honda Fitto), also marketed as the Honda Jazz (Japanese: ホンダ・ジャズ Honda Jazu), is a five-door, front-engine, front-wheel-drive B-segment supermini manufactured and marketed by Honda since 2001 and now in its third generation. Marketed worldwide and manufactured at ten plants in eight countries, sales reached almost 5 million by mid-2013.</string>
    <string name="manufacturer_fit">Honda</string>
    <string name="prod_fit">2001-present</string>
    <string name="class_fit">Subcompact</string>
    <string name="battery_fit">20 kWh lithium-ion battery and 92 kW coaxial electric motor.</string>
    <string name="acc_fit">8.4 seconds</string>
    <string name="price_modelx">$132,000</string>
    <string name="content_text_modelx">The Tesla Model X is a mid-size all-electric luxury SUV made by Tesla, Inc.. The vehicle is unique in the concept that it uses falcon wing doors instead of traditional automotive doors. The prototype was unveiled at Tesla\'s design studios in Hawthorne on February 9, 2012. The Model X has an official EPA rated 250–325 mi (402–523 km) range and the combined fuel economy equivalent and energy consumption for the AWD P90D was rated at 89 mpg‑e (39 kW⋅h/100 mi).</string>
    <string name="manufacturer_tesla">Tesla, Inc</string>
    <string name="prod_modelx">2015-present</string>
    <string name="class_modelx">Mid-size luxury crossover SUV</string>
    <string name="motor_modelx">Dual Motor AWD 90D 259 hp (193 kW) front and rear P90D 259 hp (193 kW) front, 503 hp (375 kW) rear</string>
    <string name="acc_modelx">3.1 seconds</string>
</resources>