<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/rl_about"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:layout_centerInParent="true"
        android:src="@mipmap/profile_ega"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@id/img_item_photo"
        android:layout_marginTop="20dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tv_pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/tv_name"
        android:textStyle="italic"
        android:text="@string/pro" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pro"
        android:layout_centerInParent="true"
        android:text="@string/email" />
</RelativeLayout>